[workspace]
members = [
    "polaris-grpc",
    "polaris-grpc-cli",
    "polaris-grpc-build",
]
resolver = "2"

[profile.release]
opt-level = 3

[workspace.package]
authors =["https://github.com/polarismesh"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "grpc-rust integrates with polaris-rust."
homepage = "https://github.com/polarismesh/grpc-rustpolaris"
repository = "https://github.com/polarismesh/grpc-rust-polaris.git"
readme = "README.md"
keywords = ["polaris", "solution", "governance", "server", "proxyless"]
categories = ["config", "asynchronous", "development-tools"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]
